--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,158 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Talknote - Your Notes App</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+        }
+
+        body {
+            min-height: 100vh;
+            background: linear-gradient(135deg, #000, #1a1a1a, #000);
+            padding: 18px;
+            color: #f5f5f5;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .glass-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 14px 18px;
+            border-radius: 16px;
+            background: rgba(255, 255, 255, 0.08);
+            backdrop-filter: blur(14px);
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            margin-bottom: 30px;
+        }
+
+        .logo {
+            font-weight: 700;
+            letter-spacing: 0.4px;
+            font-size: 24px;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 50px 20px;
+        }
+
+        .hero h1 {
+            font-size: 48px;
+            margin-bottom: 20px;
+            background: linear-gradient(45deg, #00d4ff, #0099ff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .hero p {
+            font-size: 18px;
+            opacity: 0.9;
+            margin-bottom: 30px;
+        }
+
+        .cta-button {
+            display: inline-block;
+            padding: 15px 30px;
+            background: linear-gradient(45deg, #00d4ff, #0099ff);
+            color: white;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 18px;
+            transition: transform 0.3s;
+        }
+
+        .cta-button:hover {
+            transform: translateY(-2px);
+        }
+
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 50px;
+        }
+
+        .feature-card {
+            padding: 25px;
+            border-radius: 16px;
+            background: rgba(255, 255, 255, 0.06);
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            backdrop-filter: blur(12px);
+        }
+
+        .feature-card i {
+            font-size: 32px;
+            margin-bottom: 15px;
+            color: #00d4ff;
+        }
+
+        .feature-card h3 {
+            margin-bottom: 10px;
+            font-size: 20px;
+        }
+
+        .bottombox {
+            margin-top: 50px;
+            font-size: 11px;
+            opacity: 0.6;
+            text-align: center;
+            font-family: monospace;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header class="glass-header">
+            <div class="logo">Talknote</div>
+            <div class="icons">
+                <i class="fa-solid fa-house"></i>
+                <i class="fa-solid fa-bookmark"></i>
+                <i class="fa-solid fa-user"></i>
+            </div>
+        </header>
+
+        <section class="hero">
+            <h1>Talknote</h1>
+            <p>Create, share, and collaborate on notes. Public notes get their own shareable link!</p>
+            <a href="#features" class="cta-button">Get Started</a>
+        </section>
+
+        <section class="features" id="features">
+            <div class="feature-card">
+                <i class="fa-solid fa-note-sticky"></i>
+                <h3>Create Notes</h3>
+                <p>Write notes with rich formatting and organize them your way.</p>
+            </div>
+            <div class="feature-card">
+                <i class="fa-solid fa-share-nodes"></i>
+                <h3>Share Publicly</h3>
+                <p>Share notes with anyone via a simple link. Control privacy settings.</p>
+            </div>
+            <div class="feature-card">
+                <i class="fa-solid fa-lock"></i>
+                <h3>Keep Private</h3>
+                <p>Some thoughts are just for you. Keep notes private when needed.</p>
+            </div>
+        </section>
+
+        <div class="bottombox">
+            Powered by Talknote © 2025 • <a href="/api/notes?note_id=example" style="color: #00d4ff; text-decoration: none;">API</a>
+        </div>
+    </div>
+</body>
+</html>
