--- a/public/index.html
+++ b/public/index.html
@@ -350,8 +350,8 @@
             
             <div class="nav-links">
                 <a href="#features" class="nav-link">Features</a>
-                <a href="/login.html" class="nav-link">Login</a>
-                <a href="/register.html" class="nav-link">Register</a>
+                <a href="/join" class="nav-link">Login</a>
+                <a href="/join" class="nav-link">Register</a>
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-moon"></i>
                 </button>
@@ -443,7 +443,7 @@
                     </div>
                     <h2>Ready to Write?</h2>
                     <p style="margin-bottom: 24px;">Join thousands who have already organized their thoughts with Talknote.</p>
-                    <button class="btn btn-primary" onclick="window.location.href='/register.html'" style="margin: 0 auto;">
+                    <button class="btn btn-primary" onclick="window.location.href='/join'" style="margin: 0 auto;">
                         <i class="fas fa-user-plus"></i>
                         Create Free Account
                     </button>
@@ -459,9 +459,9 @@
                 © 2025 Talknote. All rights reserved.
             </div>
             <div class="footer-links">
-                <a href="/privacy.html" class="footer-link">Privacy</a>
-                <a href="/terms.html" class="footer-link">Terms</a>
-                <a href="/contact.html" class="footer-link">Contact</a>
+                <a href="/" class="footer-link">Privacy</a>
+                <a href="/" class="footer-link">Terms</a>
+                <a href="/" class="footer-link">Contact</a>
                 <a href="https://github.com" class="footer-link">GitHub</a>
             </div>
         </div>
