Enhance SEO and social media metadata in index.html
Added SEO and social media metadata for better visibility.

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,39 @@
 <html lang="en" data-theme="auto">
 <head>
     <meta charset="UTF-8">
+    <!-- Basic SEO -->
+<meta name="description" content="Talknote is a modern, minimalist note-taking platform for writing, sharing, and collaborating with clarity. Powered by AI, built for focus.">
+<meta name="keywords" content="Talknote, note taking, notes app, AI notes, writing, productivity, collaboration">
+<meta name="author" content="Talknote">
+<meta name="robots" content="index, follow">
+
+<!-- App / Theme -->
+<meta name="theme-color" content="#000000">
+<meta name="color-scheme" content="light dark">
+
+<!-- Favicon / App Icons -->
+<link rel="icon" type="image/jpeg" href="https://mytalknote.vercel.app/public/logo.jpg">
+<link rel="apple-touch-icon" href="https://mytalknote.vercel.app/public/logo.jpg">
+
+<!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Talknote | Modern Note Taking">
+<meta property="og:description" content="Think. Write. Share. A minimalist, AI-powered note-taking platform built for modern thinkers.">
+<meta property="og:url" content="https://mytalknote.vercel.app">
+<meta property="og:image" content="https://mytalknote.vercel.app/public/logo.jpg">
+<meta property="og:site_name" content="Talknote">
+
+<!-- Twitter / X -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Talknote | Modern Note Taking">
+<meta name="twitter:description" content="A clean, AI-powered note-taking platform for writing, sharing, and collaboration.">
+<meta name="twitter:image" content="https://mytalknote.vercel.app/public/logo.jpg">
+
+<!-- PWA / Mobile -->
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Talknote">
+<meta name="application-name" content="Talknote">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talknote | Modern Note Taking</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
